[package]
name = "stars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
futures = "0.3.25"
regex = "1.7.1"
reqwest = {version = "0.11.13", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
time = {version = "0.3.17", features = ["parsing", "formatting", "macros"]}
tokio = { version = "1.24.2", features = ["full"] }
